update list todos so it can filter to completed
